--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,6 @@
     <!-- <meta name="apple-mobile-web-app-capable" content="yes"> -->
     <meta name="mobile-web-app-capable" content="yes">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     
@@ -24,6 +23,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="apple-touch-icon" href="./favicon.jpg">
+
+    <script src="https://cdn.tailwindcss.com"></script>
 
   </head>
   <body>
